# wit-sample1

./: .gitignore  .gitmodules  Cargo.toml  Makefile  README.md  app.html  calendar.html  index.html  main.ts  package-lock.json  package.json  schedule.html  script.js  style.css  test_shift_config.json  tsconfig.json  vite.config.js
.vim/: coc-settings.json
component-features/: .gitignore  Cargo.toml
component-features/src/: async_example.rs  lib.rs  load_rules.rs  shift_calendar_manager.rs  shift_gen.rs  shift_manager.rs
component-features/tests/: shift_calendar_manager_test.rs
component-features/wit/: README.md  world.wit
js/: async-mock.js  config-mock.js  dummy-logger.js
shift-manager-tauri/: index.html  package-lock.json  package.json
shift-manager-tauri/src/: main.ts  styles.css  types.ts
shift-manager-tauri/src-tauri/: Cargo.toml  README.md  tauri.conf.json
shift-manager-tauri/src-tauri/.vim/: coc-settings.json
shift-manager-tauri/src-tauri/migrations/: 20260118074126_init.sql  20260120161835_create_initial_setup.sql  20260120170000_create_rules.sql  20260121044856_add_rule_id_to_weekly_statuses.sql
shift-manager-tauri/src-tauri/src/: lib.rs  main.rs
shift-manager-tauri/src-tauri/src/application/: commands.rs  dto.rs  mod.rs  time.rs
shift-manager-tauri/src-tauri/src/domain/: calendar_logic.rs  mod.rs  models.rs  rule_model.rs  shift_calendar_model.rs
shift-manager-tauri/src-tauri/tests/: calendar_repo_test.rs  command_test.rs  rule_repo_test.rs
shift_tools/: .gitignore  Cargo.toml
shift_tools/src/: main.rs
(+6 files in other folders)
