[package]
name = "component-features"
version = "0.1.0"
edition = "2024"

[dependencies]
wit-bindgen = { version = "0.49.0", features = [
    "realloc",
] }

wit-bindgen-rt = { version = "0.44.0", features = ["bitflags"] }

chrono = "0.4.42"

shift_calendar = { path = "../work_shift_dayoff_logic" }

serde = { version = "1", features = ["derive"] }
serde_json = "1.0"

[dev-dependencies]
serde = { version = "1", features = ["derive"] }
toml = "0.8"

[lib]
crate-type = [
    "cdylib", 
    "rlib"  # test用
]
